--- a/package.json
+++ b/package.json
@@ -28,6 +28,9 @@
     "sort-by": "^1.2.0",
     "sweetalert2": "^11.11.0"
   },
+  "overrides": {
+    "rollup": "4.15.0"
+  },
   "devDependencies": {
     "@types/react": "^18.2.66",
     "@types/react-dom": "^18.2.22",
